Fix - Changed the rating control style so that it does not overflow

--- a/MvcWebRole1/Content/styles/mm.rate.css
+++ b/MvcWebRole1/Content/styles/mm.rate.css
@@ -45,9 +45,9 @@
 
     .rating-container .mirchi {
         margin: 10px;
-        padding-top: 15px;
-        width: 150px;
-        height: 100px;
+        /*padding-top: 15px;*/
+        width: 100px;
+        height: 75px;
     }
 
     .rating-container .text {
